code/amd64/deployment.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeamd
spec:
  replicas: 0
  selector:
    matchLabels:
      app: codeamd
  template:
    metadata:
      labels:
        app: codeamd
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: codeamd
          image: linuxserver/code-server:4.141.0
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: s6-patch
              mountPath: /etc/s6-overlay/s6-rc.d/init-code-server
            - name: config-volume
              mountPath: /config
              readOnly: false
            - name: workspace-volume
              mountPath: /workspace
              readOnly: false
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: codeamd-config-pvc
        - name: workspace-volume
          persistentVolumeClaim:
            claimName: codeamd-workspace-pvc
        - name: s6-patch
          emptyDir: {}
