code/amd64/service.yml
apiVersion: v1
kind: Service
metadata:
  name: codeamd-service
spec:
  selector:
    app: codeamd
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
